fix nav spacing and add margin below reference header

--- a/app/assets/stylesheets/overrides.css
+++ b/app/assets/stylesheets/overrides.css
@@ -60,3 +60,6 @@ p {
   width:550px;
   margin:0 auto;
 }
+#reference_header_text_div {
+  margin-bottom:5px;
+}
